# rust-data-bench

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yml
test-compress/: Cargo.toml  README.md
test-compress/data/: json  wasm
test-compress/src/: main.rs
test-hash/: Cargo.toml  README.md  bench.sh
test-hash/src/: main.rs
