[package]
name = "test-compress"
version = "0.1.0"
authors = ["Johan Andersson <repi@repi.se>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
argh = "0.1.7"
rayon = "1.0"
num_cpus = "1.0"
lz4_flex = { version = "0.9.2", default-features = false }
lz4-compression = "0.7.0"
snap = "1.0.1"
smush = { version = "0.1.5", default-features = false, features = ["gzip_support", "deflate_support", "zlib_support", "brotli_support"] }
miniz_oxide = "0.5.1"
ruzstd = "0.3.0"

# non-native 
cloudflare-zlib = { version = "0.2.5", optional = true }
bzip2 = { version = "0.4.1", optional = true }
zstd = { version = "0.11.2", optional = true }

[features]
default = []
non_rust = [
    "smush/xz_support",
    "smush/lz4_support",
    #"smush/zstd_support",
    "cloudflare-zlib",
    "bzip2",
    "zstd",
]
