[package]
name = "test-hash"
version = "0.1.0"
authors = ["Johan Andersson <repi@repi.se>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
structopt = "0.3.15"
rayon = "1.0"
num_cpus = "1.0"
blake2 = "0.9.0"
blake2b_simd = "0.5.10"
blake2s_simd = "0.5.10"
blake3 = { version = "1.1.0", features = ["rayon"] }
byteorder = "1.3.4"
md5 = "0.7.0"
md5-alt = { package = "md-5", version = "0.9.1" }
multibase = "0.8.0"
multihash = "0.11.2"
seahash = "4.0.1"
sha2 = "0.9.1"
sha3 = "0.9.1"
t1ha = "0.1.0"
twox-hash = "1.5.0"
sthash = "0.2.6"
ahash = "0.4.4"
bao = "0.10.1"
tiny-keccak = { version = "2.0", features = ["keccak", "k12"] }
siphasher = "0.3.5"
highway = "0.6.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = "0.16.15"
#xxhrs = "1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
meowhash = "0.3.0"
